--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head> <link rel="stylesheet" href="style.css">
 <body>
     <header>
-        <h1>Vai ser uma imagem aqui</h1>
+        <img class="cabeçalho imagem">
         <ul>
             <li>Escola</li>
             <li>Estudante</li>
